# zephyr

drivers/adc/: adc_sam0.c
drivers/can/: can_mcan.c  can_sam0.c
dts/bindings/can/: atmel,sam0-can.yaml
include/zephyr/arch/arm/aarch32/cortex_m/scripts/: linker.ld
scripts/footprint/: size_report
soc/arm/atmel_sam0/common/: soc_port.c  soc_samc2x.c
subsys/testsuite/ztest/src/: ztest_new.c
tests/drivers/can/api/: CMakeLists.txt  prj.conf
tests/drivers/can/api/dtc_configurations/: epm_CAN_for_validation.overlay
tests/drivers/can/api/src/: common.h  tc_util_user_override.h
tests/drivers/can/timing/: CMakeLists.txt  prj.conf
tests/drivers/can/timing/dtc_configurations/: epm_CAN_for_validation.overlay
tests/drivers/can/timing/src/: semihost_extra.c
